# RustMultithreadedMatrixMult

./: Cargo.toml  README.md  multithread_matrix.pyi  pyproject.toml
python_examples/: matrix_mult_performance.py  matrix_mult_simple_examples.py  zpr_matrix_mult.py
rust_examples/: main.rs
src/: lib.rs  main.rs
tests/: test_matrix_mult.rs  test_matrix_mult_different_thread_counts.rs
