[package]
name = "multithread_matrix"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "multithread_matrix"
crate-type = ["cdylib", 'lib']
path = "src/lib.rs"

[[bin]]
name = "multithread_matrix_bin"
path = "rust_examples/main.rs"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21.0"
ndarray = "0.15"
rand = "0.8"

