[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "zpr_multithread_matrix"
authors = [{name="Piotr Patek", email="piotrpatek17@gmail.com"}]
description = "Multithreaded matrix multiplication package made for the Advanced C++ Programming Course at WUT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy"
]
